@@ -18,8 +18,8 @@ tmpdir: "/scratch/project_2001746/tmp"                                         #
 
 # Parameters for the GBS-SNP-CROP tools
 ################################################################################
-enz1: "GAATTC"                                                                 # First restriction enzyme sequence
-enz2: "GCATGC"                                                                 # Second restriction enzyme sequence
+enz1: "G'AATTC"                                                                # First restriction enzyme sequence, indicate overhang via '
+enz2: "GCATG'C"                                                                # Second restriction enzyme sequence, indicate overhang via '
 libname: "AllReads"                                                            # 
 libtype: "PE"                                                                  # Library type, paired-end (PE) or single-end (SE)
 minLength: 300                                                                 # Minimum aimed fragment size (during wetlab size selection phase)
